// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationFooter /> Default story renders snapshot 1`] = `
<footer
  class="css-1w632m9"
>
  <div
    class="css-qqwobx"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ukbrfh-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-1u330x6"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Logo Slot
        </div>
        <p>
          Logo Name
        </p>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary css-cgfr5x-MuiChip-root"
        >
          <span
            class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
          >
            Beta
          </span>
        </div>
      </div>
    </a>
    <div
      class="css-1rtl18d"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/1"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/2"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/3"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/4"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/5"
        target="_blank"
      >
        Nav Item
      </a>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-1ttjpcz-MuiDivider-root"
  />
  <div
    class="css-1ne7zra"
  >
    <div
      class="css-11c0vhu"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/1"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/2"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/3"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/4"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1dg42ge-MuiTypography-root-MuiLink-root"
        href="https://example.com/nav/5"
      >
        Link Item
      </a>
    </div>
    <div
      class="css-11xb7p7"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ukbrfh-MuiTypography-root-MuiLink-root"
        href="https://example.com/1"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Image Slot
        </div>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ukbrfh-MuiTypography-root-MuiLink-root"
        href="https://example.com/2"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Image Slot
        </div>
      </a>
    </div>
  </div>
</footer>
`;

exports[`<NavigationFooter /> matches the snapshot 1`] = `
<DocumentFragment>
  <footer
    class="css-1w632m9"
  >
    <div
      class="css-qqwobx"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ukbrfh-MuiTypography-root-MuiLink-root"
        href="https://example.com"
      >
        <div
          class="css-1u330x6"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Logo Slot
          </div>
          <p>
            Logo Name
          </p>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary css-cgfr5x-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Beta
            </span>
          </div>
        </div>
      </a>
      <div
        class="css-1rtl18d"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/1"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/2"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/3"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/4"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1sbruyx-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/5"
          target="_blank"
        >
          Nav Item
        </a>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1ttjpcz-MuiDivider-root"
    />
    <div
      class="css-1ne7zra"
    >
      <div
        class="css-11c0vhu"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/1"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/2"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/3"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-nlurq0-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/4"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1dg42ge-MuiTypography-root-MuiLink-root"
          href="https://example.com/nav/5"
        >
          Link Item
        </a>
      </div>
      <div
        class="css-11xb7p7"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ukbrfh-MuiTypography-root-MuiLink-root"
          href="https://example.com/1"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Image Slot
          </div>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ukbrfh-MuiTypography-root-MuiLink-root"
          href="https://example.com/2"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Image Slot
          </div>
        </a>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
